[package]
name = "coderunner-cli"
version = "0.1.0"
authors = ["Ilhan Yavuz Iskurt <ilhanyavuz.02@hotmail.com>"]
edition = "2021"
description = "Runs binary with sample cases (with inputs)"
readme = "README.md"
repository = "https://github.com/ilhaniskurt/coderunner-cli/"
license = "MIT License"
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
publish = false

[[bin]]
name = "crc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["cargo", "derive"]}
log = "0.4.18"
simple_logger = "4.1.0"
